fix: Misfortune dice icons not being visible on dark theme

--- a/styles/less/wfrp3e.less
+++ b/styles/less/wfrp3e.less
@@ -238,7 +238,7 @@ th {
 
 		&.misfortune {
 			color: black;
-			-webkit-text-stroke-width: 0;
+			-webkit-text-stroke-color: white;
 
 			&:before {
 				content: "6";
